# OpenGL-NPR

./: CMakeLists.txt  README.md
glad/: CMakeLists.txt  Makefile
glengine/: CMakeLists.txt  Makefile
glengine/include/glengine/: glengine.hpp  orbitalCamera.hpp
glengine/src/: orbitalCamera.cpp
glfw-3.3.8/: Makefile  cmake_install.cmake
glfw-3.3.8/src/: Makefile  cmake_install.cmake
imgui-1.91.5/: CMakeLists.txt
project/: CMakeLists.txt
project/project/: CMakeLists.txt
project/project/include/project/: config.hpp
project/project/resources/shaders/: lighting.frag  lighting.vert  outline.frag  outline.vert  simple.frag  simple.vert
project/project/src/: main.cpp  tools.cpp  tools.hpp
stbimage/: CMakeLists.txt  Makefile  cmake_install.cmake
stbimage/src/: stb_image.cpp
